Added first version of open sky notifications

--- a/OpenSky.Client/Themes/VectorGraphics.xaml
+++ b/OpenSky.Client/Themes/VectorGraphics.xaml
@@ -422,4 +422,152 @@
             </DrawingGroup>
         </DrawingImage.Drawing>
     </DrawingImage>
+
+    <DrawingImage x:Key="Asterisks">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V201.1 H214.6 V0 H0 Z">
+                <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M214.6,201.1z M0,0z M205.1,79.9L131.1,86.3 177.5,24.6C168,-5.99999999999999,139.4,0.600000000000009,139.4,0.600000000000009L106.5,69.5 73.5,0.6C38.1,-3.8,35.4,24.6,35.4,24.6L81.8,86.3 7.8,79.9C7.8,79.9,-9.4,99.2,7.8,121.5L81.8,114.3 35.3,176C35.3,176,39.7,203.8,73.4,200L106.3,131.1 139.2,200C139.2,200,166.8,208.7,177.3,176L130.9,114.3 204.9,120.7C226.5,101.4,205.1,79.9,205.1,79.9z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Check">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V183.5 H183.5 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <DrawingGroup Transform="0.7071,-0.7071,0.7071,0.7071,-38.0029,91.7472">
+                        <GeometryDrawing Brush="#FF009900">
+                            <GeometryDrawing.Geometry>
+                                <EllipseGeometry RadiusX="91.7" RadiusY="91.7" Center="91.7,91.7" />
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                    </DrawingGroup>
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M183.5,183.5z M0,0z M78.9,152.6C78.3,152.6,77.8,152.4,77.3,152L22,105C21,104.1,20.9,102.6,21.7,101.6L41.7,78.1C42.2,77.6 42.8,77.2 43.6,77.2 44.2,77.2 44.7,77.4 45.2,77.8L70.8,99.6C71.7,100.4 73,100.8 74.2,100.8 75.8,100.8 77.2,100.1 78.2,98.9L134.2,31.7C134.7,31.1 135.3,30.8 136.1,30.8 136.7,30.8 137.2,31 137.7,31.4L161.4,51.2C161.9,51.6 162.2,52.2 162.3,52.9 162.4,53.6 162.2,54.2 161.8,54.7L80.9,151.8C80.3,152.3,79.7,152.6,78.9,152.6z" />
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Error">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V270.2 H270.2 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <DrawingGroup Transform="0.7071,-0.7071,0.7071,0.7071,-55.9522,135.0804">
+                        <GeometryDrawing Brush="#FFCC0001">
+                            <GeometryDrawing.Geometry>
+                                <EllipseGeometry RadiusX="135.1" RadiusY="135.1" Center="135.1,135.1" />
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                    </DrawingGroup>
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M270.2,270.2z M0,0z M225.9,186.4L174,134.9 225.5,83C226.8,81.7,226.8,79.5,225.5,78.1L191.3,44.1C190,42.8,187.8,42.8,186.4,44.1L134.9,96 83.1,44.6C81.8,43.3,79.6,43.3,78.2,44.6L44.2,78.8C42.9,80.1,42.9,82.3,44.2,83.7L96.1,135.2 44.6,187.1C43.3,188.4,43.3,190.6,44.6,192L78.8,226C80.1,227.3,82.3,227.3,83.7,226L135.2,174.1 187.1,225.6C188.4,226.9,190.6,226.9,192,225.6L226,191.4C227.2,190,227.2,187.8,225.9,186.4z" />
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Exclamation">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V248.3 H249.8 V0 H0 Z">
+                <DrawingGroup.Transform>
+                    <TranslateTransform X="0.046091455966234207" Y="0" />
+                </DrawingGroup.Transform>
+                <GeometryDrawing Brush="#FFF7F24F" Geometry="F1 M249.8,248.3z M0,0z M109.8,9.3L1.8,223.9C-3.9,235.1,4.3,248.3,16.8,248.3L124.8,248.3 232.8,248.3C245.4,248.3,253.5,235.1,247.9,223.9L139.9,9.3C133.7,-3.1,116,-3.1,109.8,9.3z" />
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FF2D2D35">
+                        <GeometryDrawing.Geometry>
+                            <EllipseGeometry RadiusX="15.3" RadiusY="15.3" Center="124.8,199.1" />
+                        </GeometryDrawing.Geometry>
+                    </GeometryDrawing>
+                    <GeometryDrawing Brush="#FF2D2D35" Geometry="F1 M249.8,248.3z M0,0z M140.1,88.6C140.1,80.2 133.3,73.3 124.8,73.3 116.3,73.3 109.5,80.1 109.5,88.6 109.5,89 109.5,89.3 109.5,89.7L109.5,89.7 120.3,171.2 120.4,171.2C120.7,173.3 122.6,174.9 124.8,174.9 127,174.9 128.8,173.3 129.2,171.2L129.3,171.2 140.1,89.7 140.1,89.7C140.1,89.4,140.1,89,140.1,88.6z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Hand">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V230.2 H230.2 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FFEE4242" Geometry="F1 M230.2,230.2z M0,0z M65.5,228.3L1.9,164.7C0.7,163.5,0,161.8,0,160.1L0,70.1C0,68.4,0.7,66.7,1.9,65.5L65.5,1.9C66.7,0.7,68.4,0,70.1,0L160.1,0C161.8,0,163.5,0.7,164.7,1.9L228.3,65.5C229.5,66.7,230.2,68.4,230.2,70.1L230.2,160.1C230.2,161.8,229.5,163.5,228.3,164.7L164.7,228.3C163.5,229.5,161.8,230.2,160.1,230.2L70.1,230.2C68.4,230.2,66.7,229.5,65.5,228.3z" />
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M160.1,6.4L70.1,6.4 6.5,70 6.5,160 70.1,223.6 160.1,223.6 223.7,160 223.7,70 160.1,6.4z M219.4,158.2L158.3,219.3 71.9,219.3 10.8,158.2 10.8,71.8 71.9,10.7 158.3,10.7 219.4,71.8 219.4,158.2z" />
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M174.1,96.9L174.1,96.9C169.3,94.3,163.3,96.1,160.7,100.9L146.1,125.1 145.9,125.3 145.9,59.1C145.9,57 145,55.1 143.7,53.7 142.3,52.3 140.4,51.5 138.3,51.5 134.1,51.5 130.7,54.9 130.7,59.1L130.7,106.6C130.7,107.4 130.1,108 129.3,108 128.5,108 127.9,107.4 127.9,106.6L127.9,48.8C127.9,46.4 126.9,44.3 125.4,42.7 123.8,41.1 121.7,40.2 119.3,40.2 114.6,40.2 110.7,44 110.7,48.8L110.7,106.6C110.7,107.4 110.1,108 109.3,108 108.5,108 107.9,107.4 107.9,106.6L107.9,59.7C107.9,57.4 107,55.4 105.5,53.9 104,52.4 102,51.5 99.7,51.5 95.2,51.5 91.5,55.2 91.5,59.7L91.5,117.6 91.5,118C91.5,118.8,90.9,119.4,90.1,119.4L90.1,119.4C89.3,119.4,88.7,118.8,88.7,118L88.7,82.2C88.7,79.9 87.8,77.9 86.3,76.4 84.8,74.9 82.8,74 80.5,74 76,74 72.3,77.7 72.3,82.2L72.3,124.1 72.3,140.2 72.3,151.3C72.3,169.7,87.2,184.5,105.5,184.5L119.3,184.5C128.1,184.5,137.1,182.3,143.3,174.4L143.3,174.4C144,173.7,144.6,173,145,172.1L178.2,110.3C180.7,105.5,178.9,99.5,174.1,96.9z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Info">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V243.6 H243.6 V0 H0 Z">
+                <GeometryDrawing Brush="#FF6788E6">
+                    <GeometryDrawing.Geometry>
+                        <EllipseGeometry RadiusX="121.8" RadiusY="121.8" Center="121.8,121.8" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FF173B9E" Geometry="F1 M243.6,243.6z M0,0z M227.6,77.1C221.8,63.4 213.5,51.1 203,40.6 192.5,30.1 180.2,21.8 166.5,16 152.4,10 137.3,7 121.8,7 106.3,7 91.3,10 77.1,16 63.4,21.8 51.1,30.1 40.6,40.6 30.1,51.1 21.8,63.4 16,77.1 10,91.2 7,106.3 7,121.8 7,137.3 10,152.3 16,166.5 21.8,180.2 30.1,192.5 40.6,203 51.1,213.5 63.4,221.8 77.1,227.6 91.2,233.6 106.3,236.6 121.8,236.6 137.3,236.6 152.3,233.6 166.5,227.6 180.2,221.8 192.5,213.5 203,203 213.5,192.5 221.8,180.2 227.6,166.5 233.6,152.4 236.6,137.3 236.6,121.8 236.6,106.3 233.6,91.3 227.6,77.1z M223.3,164.7C217.8,177.8 209.8,189.6 199.7,199.7 189.6,209.8 177.8,217.8 164.7,223.3 151.1,229 136.7,231.9 121.8,231.9 106.9,231.9 92.5,229 78.9,223.3 65.8,217.8 54,209.8 43.9,199.7 33.8,189.6 25.8,177.8 20.3,164.7 14.6,151.1 11.6,136.7 11.6,121.8 11.6,106.9 14.5,92.5 20.2,78.9 25.7,65.8 33.7,54 43.8,43.9 53.9,33.8 65.7,25.8 78.8,20.3 92.4,14.6 106.8,11.7 121.7,11.7 136.6,11.7 151,14.6 164.6,20.3 177.7,25.8 189.5,33.8 199.6,43.9 209.7,54 217.7,65.8 223.2,78.9 228.9,92.5 231.8,106.9 231.8,121.8 231.9,136.7 229,151.1 223.3,164.7z" />
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M243.6,243.6z M0,0z M140.4,172.8L140.4,94.4C140.4,93.1,139.4,92.1,138.1,92.1L91.8,92.1C90.5,92.1,89.5,93.1,89.5,94.4L89.5,106.7C89.5,108,90.5,109,91.8,109L105,109C106.3,109,107.3,110,107.3,111.3L107.3,172.7C107.3,174,106.3,175,105,175L91.8,175C90.5,175,89.5,176,89.5,177.3L89.5,189.7C89.5,191,90.5,192,91.8,192L155.9,192C157.2,192,158.2,191,158.2,189.7L158.2,177.3C158.2,176,157.2,175,155.9,175L142.7,175C141.4,175.1,140.4,174,140.4,172.8z" />
+                    <GeometryDrawing Brush="#FFFFFFFF">
+                        <GeometryDrawing.Geometry>
+                            <EllipseGeometry RadiusX="16.8" RadiusY="16.8" Center="123,60.9" />
+                        </GeometryDrawing.Geometry>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Question">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V365.3 H368.6 V0 H0 Z">
+                <DrawingGroup.Transform>
+                    <TranslateTransform X="0.012499997392296791" Y="0" />
+                </DrawingGroup.Transform>
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FF2E63FF" Geometry="F0 M368.6,365.3z M0,0z M368.6,180.5C368.6,130.6 348.4,85.5 315.7,52.8 283.1,20.2 238,0 188.1,0 138.2,0 93.1,20.2 60.4,52.9 27.8,85.5 7.6,130.7 7.6,180.5 7.6,198 10.1,215 14.8,231.1 19.3,246.7 25.9,261.5 34.3,275L0.6,357C-0.1,358.3 -0.2,359.9 0.3,361.4 1.3,364.4 4.6,366 7.6,365L7.6,365 95.8,335.6C109.2,343.6 123.6,349.9 138.9,354.2 154.6,358.6 171.1,361 188.1,361 238,361 283.1,340.8 315.8,308.1 348.4,275.5 368.6,230.4 368.6,180.5z" />
+                    <GeometryDrawing Brush="#FFECEFF1" Geometry="F1 M368.6,365.3z M0,0z M170.8,239.7C170.7,236.2 170.6,233.5 170.6,231.7 170.6,221.2 172.1,212.1 175.1,204.5 177.3,198.8 180.8,193 185.6,187.1 189.1,182.8 195.6,176.7 204.8,168.5 214.1,160.3 220.1,153.8 222.8,148.9 225.6,144.1 227,138.8 227,133 227,122.6 222.9,113.5 214.8,105.6 206.7,97.7 196.7,93.8 184.9,93.8 173.5,93.8 164,97.4 156.4,104.5 148.7,111.6 143.8,122.8 141.4,137.9L113.9,134.6C116.4,114.3 123.7,98.8 135.9,88 148.4,77.4 164.5,72 184.6,72 205.9,72 222.9,77.8 235.5,89.4 248.2,101 254.5,114.9 254.5,131.4 254.5,140.9 252.3,149.6 247.8,157.7 243.3,165.7 234.7,175.5 221.7,186.9 213,194.7 207.3,200.3 204.6,204 201.9,207.7 199.9,211.9 198.7,216.6 197.4,221.4 196.7,229.1 196.5,239.8L170.8,239.8 170.8,239.7z M169.2,293.4L169.2,262.9 199.6,262.9 199.6,293.4 169.2,293.4z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Stop">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V230.2 H230.2 V0 H0 Z">
+                <GeometryDrawing Brush="#FFEE4242" Geometry="F1 M230.2,230.2z M0,0z M65.5,228.3L1.9,164.7C0.7,163.5,0,161.8,0,160.1L0,70.1C0,68.4,0.7,66.7,1.9,65.5L65.5,1.9C66.7,0.7,68.4,0,70.1,0L160.1,0C161.8,0,163.5,0.7,164.7,1.9L228.3,65.5C229.5,66.7,230.2,68.4,230.2,70.1L230.2,160.1C230.2,161.8,229.5,163.5,228.3,164.7L164.7,228.3C163.5,229.5,161.8,230.2,160.1,230.2L70.1,230.2C68.4,230.2,66.7,229.5,65.5,228.3z" />
+                <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M160.1,6.4L70.1,6.4 6.5,70 6.5,160 70.1,223.6 160.1,223.6 223.7,160 223.7,70 160.1,6.4z M219.4,158.2L158.3,219.3 71.9,219.3 10.8,158.2 10.8,71.8 71.9,10.7 158.3,10.7 219.4,71.8 219.4,158.2z" />
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M45.2,133.4C42.3,132.7,39.9,131.8,38,130.6L42,121.5C43.8,122.5 45.7,123.3 47.9,124 50.1,124.6 52.2,124.9 54.2,124.9 55.9,124.9 57.2,124.7 57.9,124.4 58.6,124.1 59,123.6 59,122.9 59,122.1 58.5,121.5 57.5,121.2 56.5,120.8 54.9,120.4 52.7,119.9 49.8,119.3 47.5,118.7 45.5,118 43.6,117.3 41.9,116.2 40.5,114.6 39.1,113 38.4,110.9 38.4,108.2 38.4,105.9 39.1,103.7 40.4,101.8 41.7,99.9 43.7,98.4 46.3,97.3 48.9,96.2 52.1,95.7 55.8,95.7 58.3,95.7 60.8,96 63.3,96.5 65.8,97 67.9,97.9 69.8,98.9L66,108C62.4,106.2 58.9,105.2 55.7,105.2 52.5,105.2 50.9,106 50.9,107.5 50.9,108.2 51.4,108.8 52.3,109.2 53.3,109.6 54.8,110 57,110.4 59.8,110.9 62.2,111.5 64.2,112.2 66.1,112.9 67.8,114 69.3,115.6 70.7,117.2 71.4,119.3 71.4,122 71.4,124.3 70.7,126.4 69.4,128.3 68.1,130.2 66.1,131.7 63.5,132.8 60.9,133.9 57.7,134.5 54,134.5 51.1,134.5 48.1,134.1 45.2,133.4z" />
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M82.7,106.2L71.8,106.2 71.8,96.5 106,96.5 106,106.2 95.1,106.2 95.1,133.6 82.6,133.6 82.7,106.2 82.7,106.2z" />
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M117.4,132C114.2,130.3 111.7,128 109.9,125.1 108.1,122.2 107.2,118.8 107.2,115.1 107.2,111.4 108.1,108.1 109.9,105.1 111.7,102.2 114.2,99.8 117.4,98.2 120.6,96.5 124.2,95.7 128.2,95.7 132.2,95.7 135.8,96.5 139,98.2 142.2,99.9 144.7,102.2 146.5,105.1 148.3,108.1 149.2,111.4 149.2,115.1 149.2,118.8 148.3,122.1 146.5,125.1 144.7,128.1 142.2,130.4 139,132 135.8,133.7 132.2,134.5 128.2,134.5 124.2,134.5 120.6,133.6 117.4,132z M132.4,123.2C133.7,122.4 134.7,121.4 135.4,120 136.1,118.6 136.5,117 136.5,115.1 136.5,113.2 136.1,111.6 135.4,110.2 134.7,108.8 133.7,107.7 132.4,107 131.1,106.2 129.7,105.9 128.2,105.9 126.7,105.9 125.2,106.3 124,107 122.7,107.8 121.7,108.8 121,110.2 120.3,111.6 119.9,113.2 119.9,115.1 119.9,117 120.3,118.6 121,120 121.7,121.4 122.7,122.5 124,123.2 125.3,124 126.7,124.3 128.2,124.3 129.7,124.3 131.2,124 132.4,123.2z" />
+                    <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M230.2,230.2z M0,0z M180.5,98.2C183,99.3 185,101 186.4,103.1 187.8,105.2 188.5,107.7 188.5,110.5 188.5,113.3 187.8,115.8 186.4,117.9 185,120 183.1,121.6 180.5,122.8 177.9,124 175,124.5 171.5,124.5L166.1,124.5 166.1,133.6 153.6,133.6 153.6,96.5 171.5,96.5C175,96.5,178,97.1,180.5,98.2z M174.6,113.7C175.4,112.9 175.9,111.9 175.9,110.5 175.9,109.1 175.5,108.1 174.6,107.3 173.8,106.5 172.5,106.2 170.8,106.2L166.2,106.2 166.2,114.9 170.8,114.9C172.4,114.9,173.7,114.5,174.6,113.7z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Warning">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V281.7 H281.7 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <DrawingGroup Transform="0.04370155,-0.999,0.999,0.04370155,-6.0197,275.3721">
+                        <GeometryDrawing Brush="#FFFDC10F">
+                            <GeometryDrawing.Geometry>
+                                <EllipseGeometry RadiusX="140.8" RadiusY="140.8" Center="140.8,140.8" />
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                    </DrawingGroup>
+                    <DrawingGroup Opacity="1">
+                        <DrawingGroup Opacity="1">
+                            <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M281.7,281.7z M0,0z M113,219.1C113,202.6 124.5,190.8 141,190.8 157.5,190.8 168.4,202.6 168.7,219.1 168.7,235.3 157.8,247.4 141,247.4 124.2,247.5 113,235.3 113,219.1z M127,175.2C124.9,175.2,123.2,173.5,123.1,171.4L116.3,38C116.2,35.9,117.8,34.2,119.9,34.2L161.9,34.2C164,34.2,165.6,35.9,165.5,38L159,171.5C158.9,173.6,157.1,175.3,155.1,175.3L127,175.3z" />
+                        </DrawingGroup>
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
 </ResourceDictionary>
