Added new custom notifications and message boxes to most pages
Added warning and error color styles to notification and message box

--- a/OpenSky.Client/Pages/AircraftMarket.xaml
+++ b/OpenSky.Client/Pages/AircraftMarket.xaml
@@ -23,7 +23,7 @@
                       xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                       xmlns:dgx="urn:tom-englert.de/DataGridExtensions"
                       mc:Ignorable="d"
-                      LoadingText="{Binding LoadingText}"
+                      LoadingText="{Binding LoadingText}" Loaded="AircraftMarketOnLoaded"
                       VerticalScrollBar="False" HorizontalScrollBar="False"
                       d:DesignHeight="700" d:DesignWidth="1500">
     <UserControl.DataContext>
