--- a/OpenSky.Client/Pages/DataImport.xaml
+++ b/OpenSky.Client/Pages/DataImport.xaml
@@ -20,7 +20,7 @@
                  xmlns:dgx="urn:tom-englert.de/DataGridExtensions"
                  xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                  xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-                 mc:Ignorable="d" 
+                 mc:Ignorable="d" Loaded="DataImportOnLoaded"
                  LoadingText="{Binding LoadingText}" HorizontalScrollBar="False" VerticalScrollBar="False"
                  d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
