Added a few success notifications
Fixed notification container stretching over other controls and blocking mouse
Minor fixes and code cleanup

--- a/OpenSky.Client/Themes/OpenSkyStyles.xaml
+++ b/OpenSky.Client/Themes/OpenSkyStyles.xaml
@@ -425,7 +425,7 @@
                             </StackPanel>
                         </Border>
                         <Grid Grid.Row="1">
-                            <ItemsControl x:Name="NotificationsList" HorizontalAlignment="Right" VerticalAlignment="Stretch" Background="Transparent" HorizontalContentAlignment="Stretch" Grid.IsSharedSizeScope="True">
+                            <ItemsControl x:Name="NotificationsList" HorizontalAlignment="Right" VerticalAlignment="Bottom" Background="Transparent" HorizontalContentAlignment="Stretch" Grid.IsSharedSizeScope="True">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <VirtualizingStackPanel VerticalAlignment="Bottom" />
