--- a/OpenSky.Client/Pages/WorldPopulation.xaml
+++ b/OpenSky.Client/Pages/WorldPopulation.xaml
@@ -310,7 +310,7 @@
                     <DockPanel LastChildFill="True" DockPanel.Dock="Top" Margin="0,0,0,10">
                         <TextBlock DockPanel.Dock="Left" VerticalAlignment="Center">Populate the airport with the following ICAO code:</TextBlock>
                         <Button DockPanel.Dock="Right" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding PopulateAirportCommand}">Populate</Button>
-                        <TextBox Margin="10,0" Text="{Binding PopulateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="ICAO code" ui:ControlHelper.PlaceholderForeground="#666" />
+                        <TextBox Margin="10,0" Text="{Binding PopulateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="ICAO code" ui:ControlHelper.PlaceholderForeground="#666" CharacterCasing="Upper" />
                     </DockPanel>
                     <TextBox Text="{Binding PopulateResult, Mode=OneWay}" IsReadOnly="True" FontFamily="Consolas" />
                 </DockPanel>
