--- a/OpenSky.Client/Views/Main.xaml
+++ b/OpenSky.Client/Views/Main.xaml
@@ -77,7 +77,7 @@
     </Window.Resources>
     <Grid>
         <ui:NavigationView Grid.Column="0" x:Name="NavigationView" 
-                           IsBackButtonVisible="Collapsed" IsSettingsVisible="False" IsPaneOpen="True" CompactModeThresholdWidth="0" PaneTitle="Your airline name here"
+                           IsBackButtonVisible="Collapsed" IsSettingsVisible="False" IsPaneOpen="True" CompactModeThresholdWidth="0" PaneTitle="{Binding UserInfo, Mode=OneWay}"
                            ItemInvoked="NavigationView_OnItemInvoked"
                            MenuItemsSource="{Binding NavigationItems, Mode=OneWay}" 
                            FooterMenuItemsSource="{Binding NavigationFooterItems, Mode=OneWay}"
